# DABoard

./: .gitignore  CMakeLists.txt  config.h  datastore.cpp  datastore.h  jsonwrapper.cpp  jsonwrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  pch.h
data/: default.da
